RESOLVED FIXED107917
WebNavigationData does not distinguish between an empty title and a missing title
https://bugs.webkit.org/show_bug.cgi?id=107917
Summary WebNavigationData does not distinguish between an empty title and a missing t...
mitz
Reported 2013-01-24 22:44:48 PST
WebNavigationAction does not distinguish between an empty title and a missing title
Attachments
Initialize WebNavigationData with a nil title when the document has no title (2.39 KB, patch)
2013-01-24 22:48 PST, mitz
aestes: review+
mitz
Comment 1 2013-01-24 22:48:47 PST
Created attachment 184673 [details] Initialize WebNavigationData with a nil title when the document has no title
mitz
Comment 2 2013-01-25 00:23:21 PST
Note You need to log in before you can comment on or make changes to this bug.