WebNavigationData does not distinguish between an empty title and a missing title https://bugs.webkit.org/show_bug.cgi?id=107917

Reviewed by Andy Estes.

* WebCoreSupport/WebFrameLoaderClient.mm:
(nilOrNSString): Added this helper function.
(WebFrameLoaderClient::updateGlobalHistory): Initialize the WebNavigationData with a nil
title, rather than the empty string, if the document does not have a title.



git-svn-id: svn://svn.chromium.org/blink/trunk@140793 bbb929c8-8fbe-4397-9dbb-9b2b20218538